# Django_BukuTelepon

./: Procfile  README.md  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt
application/: config.py  models.py  urls.py  views.py
application/migrations/: 0001_initial.py
application/templates/: add.html  index.html  update.html
application/templates/components/: alert.html  base.html  form.html
buku_telepon/: apps.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
buku_telepon/migrations/: 0001_initial.py
buku_telepon/templates/: add.html  index.html  update.html
buku_telepon/templates/components/: alert.html  base.html  form.html
irvanudin/: asgi.py  settings.py  urls.py  wsgi.py
